@@ -49,12 +49,9 @@ class Tx_Workspaces_Controller_PreviewController extends Tx_Workspaces_Controlle
 		$this->pageRenderer->enableExtJsDebug();
 
 			// Load  JavaScript:
-		$this->pageRenderer->addExtDirectCode();
-		$this->pageRenderer->addJsFile(
-			$this->backPath . 'ajax.php?ajaxID=ExtDirect::getAPI&namespace=TYPO3.Workspaces&' . TYPO3_version,
-			NULL,
-			FALSE
-		);
+		$this->pageRenderer->addExtDirectCode(array(
+			'TYPO3.Workspaces'
+		));
 
 		$this->pageRenderer->addJsFile($this->backPath . '../t3lib/js/extjs/ux/flashmessages.js');
 		$this->pageRenderer->addJsFile($this->backPath . 'js/extjs/iframepanel.js');
